# gimbal_fw

./: CMakeLists.txt  Dockerfile  README.md  gst-top.gsttrace  main.cpp  new_prev_to_cur_transformation.txt  prev_to_cur_transformation.txt  rpi_cm4_opencv_build_config.md  smoothed_trajectory.txt  test_launch  trajectory.txt
config/: apm.launch  apm_config.yaml  apm_pluginlist.yaml  jetson_opencv_build_config.md  mavros.yaml
docker/: Dockerfile.aarch64  Dockerfile.l4t_ros2humble  Dockerfile.ros2_humble  Dockerfile.ros2_jazzy  mavlink_standart_library.patch  ros2_base.Dockerfile  ros2_build.sh  ros2_entrypoint.sh  ros_entrypoint.sh
docker/compose/: docker-compose.yml
src/: main.cpp  stabilize.cpp  test_launch.c
