# ----------------------------------------------------------------------------
# 
# ----------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.25)
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}) 


set(project_name tracker)

project(${project_name})

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fPIC -std=c++11")

FIND_PACKAGE(OpenCV REQUIRED)

#----------------------------------------------------------------------------  
#  
# ----------------------------------------------------------------------------
SET(SOURCE
main.cpp
)
#----------------------------------------------------------------------------  

#----------------------------------------------------------------------------  
#  
# ----------------------------------------------------------------------------
# SET(HEADERS ${HEADERS} ${ADD_HEADERS})

SOURCE_GROUP("Source Files" FILES ${SOURCE})
# SOURCE_GROUP("Header Files" FILES ${HEADERS})
#----------------------------------------------------------------------------  

# 
# ----------------------------------------------------------------------------
INCLUDE_DIRECTORIES("./")

# ----------------------------------------------------------------------------  
# 
# ----------------------------------------------------------------------------
  ADD_EXECUTABLE( ${project_name}
  				  ${SOURCE}
  				  ${HEADERS}
  				  )
# ----------------------------------------------------------------------------
# 
# ----------------------------------------------------------------------------
TARGET_LINK_LIBRARIES(${project_name}
                      ${OpenCV_LIBS}
					  )